style.css
/* fonts */
@font-face {
    font-family: "Lato";
    font-style: normal;
    font-weight: 400;
    src: url("assets/font/regular/lato-v16-latin-regular.woff2") format("woff2");
    src: url("assets/font/regular/lato-v16-latin-regular.woff") format("woff");
}

@font-face {
    font-family: "Lato";
    font-style: normal;
    font-weight: 300;
    src: url("assets/font/light/lato-v16-latin-300.woff") format("woff");
    src: url("assets/font/light/lato-v16-latin-300.woff2") format("woff2");
}

@font-face {
    font-family: "Lato";
    font-style: normal;
    font-weight: 700;
    src: url("assets/font/bold/lato-v16-latin-700.woff") format("woff");
    src: url("assets/font/bold/lato-v16-latin-700.woff2") format("woff2");
}

@font-face {
    font-family: "Lato";
    font-style: normal;
    font-weight: 900;
    src: url("assets/font/black/lato-v16-latin-900.woff") format("woff");
    src: url("assets/font/black/lato-v16-latin-900.woff2") format("woff2");
}

/* common properties */

body {
    margin: 0px;
}

.wrapper {
    margin: 0 auto;
    max-width: 940px;
    padding-left: 40px;
    padding-right: 40px;
}

/* singolo1 */

/* header */

.header {
    background-color: #2d303a;
    padding-top: 29px;
    padding-bottom: 30px;
    border-bottom: 6px solid #323746;
}

.header__wrapper {
    display: flex;
    flex-wrap: wrap;
    align-items: baseline;
    justify-content: space-between;
}

.logo {
    font-size: 25px;
    font-family: "Lato", "Arial", sans-serif;
    color: #ffffff;
    text-transform: uppercase;
    margin: 0px;
    font-weight: bold;
    letter-spacing: -0.02em;
}

.logo span {
    color: #f06c64;
}

.navigation {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;

    margin: 0px;
}

.navigation__item  {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 12px;
    font-weight: bold;
    text-transform: uppercase;
    list-style: none;
    vertical-align: bottom;
    padding-left: 28px;
    letter-spacing: -0.02em;
    line-height: 15px;
}

.navigation__item a {
    text-decoration: none;
    color: #ffffff;
}

.navigation__item:not(:first-of-type)::before {
    content: ".";
    position: relative;
    bottom: 3px;
    left: -13px;
    color: #494e62;
}

.navigation__item a:hover {
    color: #f06c64;
    cursor: pointer;
}

.navigation__item .active {
    color: #f06c64;
}

/* main */

/* slider */
.slider {
    background-color: #f06c64;
    
    padding-top: 53px;
    padding-bottom: 54px;
    border-bottom: 6px solid #ea676b;
}

.slider__wrapper {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.slider__left,
.slider__right {
    border: none;
    background-color: transparent;
    filter: brightness(0.9);
}

.slider__left,
.slider__right {
    padding: 0px;
}

.slider__left:hover,
.slider__right:hover {
    cursor: pointer;
    opacity: 0.5;
}

.image-vertical {
    padding-right: 17px;
}

.image-horizontal {
    padding-bottom: 2px;
}

/* our-services */
.our-services {
    padding-top: 57px;
    padding-bottom: 20px;
    background-color: #f2f2f2;
    border-bottom: 6px solid #ffffff;
}

.our-services__title {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 30px;
    font-weight: 900;
    color: #666d89; 
    text-align: start;
    margin: 0px;
    line-height: 40px;
    letter-spacing: -0.007em;
}

.our-services__text {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 18px;
    font-weight: lighter;
    line-height: 30px;
    color: #767e9e;
    margin-top: 16px;
    text-align: justify;
}

.advantages {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 0px;
    padding-top: 25px;
}

.advantages__item {
    width: 300px;
    list-style: none;
}

.advantages__wrapper-inner {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-between;
}

.advantages__description {
    width: 220px;
}

.advantages__subtitle,
.advantages__text {
    margin: 0px;
}

.advantages__subtitle {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 18px;
    font-weight: 900;
    line-height: 25px;
    color: #666d89;
}

.advantages__text {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 12px;
    font-weight: normal;
    line-height: 21px;
    color: #767e9e;
    padding-top: 7px;
    padding-bottom: 27px;
    letter-spacing: -0.01em;
    text-align: justify;
}

.advantages__image {
    padding-top: 5px;
}

/* singolo2 */

/* portfolio */

.portfolio {
    background-color: #2d303a;
    border-bottom: 6px solid #323746;
    padding-top: 60px;
    padding-bottom: 37px;
}

.portfolio__title {
    font-family: "Lato", "Arial", sans-serif;
    font-weight: 900;
    font-size: 30px;
    color: #666d89;
    text-align: left;
    margin: 0px;
}

.portfolio__text {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 18px;
    font-weight: lighter;
    color: #767e9e;
    text-align: left;
    margin: 0px;
    padding-top: 22px;
    padding-bottom: 15px;
}

.tag {
    font-family: "Lato", "Arial", sans-serif;
    background-color: transparent;
    letter-spacing: -0.02em;
    font-size: 12px;
    font-weight: normal;
    color: #767e9e;
    border: 1px solid #767e9e;
    padding-left: 7px;
    padding-right: 7px;
    padding-bottom: 3px;
    padding-top: 2px;    
    border-radius: 5px;
    margin-right: 5px;
    margin-left: 1px;
}

.active,
.tag:hover {
    color: #ffffff;
    border-color: #ffffff;
    cursor: pointer;
}

.portfolio__list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    padding: 0px;
    max-height: 621px;
    overflow: hidden;
    margin-top: 13px;
}

.portfolio__item {
    padding-top: 6px;
    padding-bottom: 10px;
}

.portfolio__item img {
    filter: brightness(0.95);
}

/* about-us */

.about-us {
    background-color: #f2f2f2;
    border-bottom: 6px solid #ffffff;
    padding-top: 60px;
    padding-bottom: 45px;
}

.about-us__title {
    font-family: "Lato", "Arial", sans-serif;
    font-weight: 900;
    font-size: 30px;
    text-align: left;
    color: #666d89;
    margin: 0px;
}

.about-us__text {
    font-family: "Lato", "Arial", sans-serif;
    font-weight: lighter;
    font-size: 18px;
    line-height: 30px;
    text-align: left;
    color: #767e9e;
    margin: 0px;
    padding-top: 17px;
    padding-bottom: 30px;
    text-align: justify;
}

.employee-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    list-style: none;
    padding: 0px;
}

.employee {
    width: 32%;
}

.employee img {
    filter: brightness(0.9);
    filter: grayscale(20%);
}

.employee__link {
    padding-top: 25px;
}

.employee__name {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 18px;
    font-weight: 900;
    text-align: left;
    color: #666d89;
    margin: 0px;
    padding-top: 11px;
    padding-bottom: 9px;
    letter-spacing: -0.01em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.employee__description {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 12px;
    line-height: 21px;
    font-weight: normal;
    text-align: justify;
    color: #767e9e;
    margin: 0px;
    letter-spacing: -0.005em;
}

.employee__link img {
    width: 15px;
    position: absolute;
    left: 25%;
    top: 25%;
}

.circle {
    border: solid 1px #767e9e;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    display: inline-block;
    position: relative;
    margin-right: 5px;
    margin-top: 22px;
}

.circle:hover {
    background-color: #ffffff;
    cursor: pointer;
    opacity: 0.5;
    transition: .2s;
}

/* singolo3 */

/* contact */

.contact {
    background-color: #f06c64;    
    padding-top: 60px;
    padding-bottom: 5px;
    border-bottom: 6px solid #ea676b;
}

.contact__title {
    font-family: "Lato", "Arial", sans-serif;
    font-weight: 900;
    text-align: left;
    margin: 0px;
    color: #f0d8d9;
    font-size: 30px;
}

.contact__text {
    font-family: "Lato", "Arial", sans-serif;
    font-weight: lighter;
    font-size: 18px;
    line-height: 30px;
    margin: 0px;
    color: #f0d8d9;
    text-align: justify;
    padding-top: 18px;
    padding-bottom: 43px;
}

.wrapper__inner {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.form,
.form__group {
    width: 620px;
}

input,
textarea {
    width: 597px;
    background-color: #d6564f;
    border-radius: 5px;

    resize: none;
    border: none;
    padding-top: 11px;
    padding-bottom: 11px;
    padding-left: 15px;
    padding-right: 8px;
}

input::-webkit-input-placeholder {
    font-size: 12px;
    font-family: "Lato", "Arial", sans-serif;
    font-weight: normal;
    color: #f48c8f;   
}

input::-moz-placeholder {
    font-size: 12px;
    font-family: "Lato", "Arial", sans-serif;
    font-weight: normal;
    color: #f48c8f;   
}

input:-moz-placeholder {
    font-size: 12px;
    font-family: "Lato", "Arial", sans-serif;
    font-weight: normal;
    color: #f48c8f;   
}

input:-ms-input-placeholder {
    font-size: 12px;
    font-family: "Lato", "Arial", sans-serif;
    font-weight: normal;
    color: #f48c8f;   
}

textarea::-webkit-input-placeholder {
    font-size: 12px;
    font-family: "Lato", "Arial", sans-serif;
    font-weight: normal;
    color: #f48c8f;   
}

input {
    margin-bottom: 16px;
}

.information {
    width: 300px;
    margin-top: 5px;
}

.information__title {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 18px;
    font-weight: 900;
    color: #f0d8d9;
    text-align: left;
    margin: 0px;
    margin-top: -7px;
    margin-bottom: 5px;
}

.information__text,
.information__address,
.tel,
.mail {
    font-family: "Lato", "Arial", sans-serif;
    font-size: 12px;
    font-weight: normal;
    color: #f0d8d9;
    text-align: justify;
    margin: 0px;
    vertical-align: center;
    text-decoration: none;
}

.information__text {
    padding-top: 5px;
    padding-bottom: 23px;
    line-height: 22px;
    letter-spacing: -0.01em;
}

.information__phone {
    padding-top: 4px;
    padding-bottom: 4px;
}

.container {
    width: 15px;
    display: inline-block;
    text-align: center;
    margin-right: 7px;
}

.button {
    width: 620px;
    margin-top: 12px;
    margin-bottom: 7px;
    cursor: pointer;
}

.button:hover {
    background-color: #ffffff;
    color: #d6564f;
    transition: .5s;
}

input[value="Send"] {
    color:  #ffffff ;
}

/* footer */

.footer__text {
    padding-left: 3px;
    font-family: "Lato", "Arial", sans-serif;
    font-size: 12px;
    color: #666d89;
    font-weight: normal;
    line-height: 22px; 
}

.resource {
    padding-left: 4px;
}

.resource::before {
    content: ".";
    position: relative;
    bottom: 3px;
    left: -2px;
    color: #494e62;
}

.circle {
    border: solid 1px #767e9e;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    display: inline-block;
    position: relative;
    margin-top: 0px;
}

.circle {
    margin-right: 4px;
}

.circle:last-child {
    margin-right: 0px;
}

.footer__link {
    padding-top: 2px;
}

.footer__link img {
    width: 15px;
    position: absolute;
    left: 25%;
    top: 25%;
}

.footer {
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: #2d303a;
}

.footer__wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

.circle:hover {
    cursor: pointer;
    opacity: 0.5;
    background-color: #ffffff;
}

